# imgui_glfw

./: .gitignore  CMakeLists.txt  README.md
include/ImGui/: imconfig.h  imspinner.h
lib/Debug/lib/: OpenMeshCored.lib  OpenMeshToolsd.lib  freetyped.lib  glad.lib
lib/Release/lib/: OpenMeshCore.lib  OpenMeshTools.lib  glad.lib  lunasvg.lib
script/: build.sh  clean.sh  configure.sh
src/: app.rc  main.cpp  main_window.cpp  main_window.h
src/imgui_components/: ImCoolbar.cpp  ImCoolbar.h  imgui_notification.h  imgui_notification.h.disabled  imgui_opengl.cpp  imgui_opengl.h
